MOBILE-426 - Create ant task to run the client builder