@@ -5,6 +5,11 @@
     <property name="development.dir" value="${lib.dir}/development" />
     <property name="gen.dir" value="${basedir}/gen" />
 
+	<path id="project.classpath">
+		<pathelement path="${basedir}/classes"/>
+		<fileset dir="${lib.dir}" includes="**/*.jar"/>
+	</path>
+
 	<taskdef name="jalopy" classname="de.hunsicker.jalopy.plugin.ant.AntPlugin">
 		<classpath>
 			<fileset dir="${development.dir}">
@@ -27,5 +32,19 @@
         		<include name="**/*.java" />
       		</fileset>
 		</jalopy>
+	</target>
+
+	<target name="build-services">
+		<java
+			classname="com.liferay.client.builder.JSONWebServiceClientBuilder"
+			classpathref="project.classpath"
+			fork="true"
+			newenvironment="true"
+		>
+			<jvmarg value="-Xms512m" />
+			<jvmarg value="-Xmx1024m" />
+			<jvmarg value="-Xss2048k" />
+			<jvmarg value="-XX:MaxPermSize=512m" />
+		</java>
 	</target>
 </project>
